@@ -563,7 +563,9 @@ void CGUIWindowFullScreen::RenderFullScreen()
     g_application.m_pPlayer->GetGeneralInfo(strGeneral);
     {
       CStdString strGeneralFPS;
-      strGeneralFPS.Format("fps:%02.2f %s", g_infoManager.GetFPS(), strGeneral.c_str() );
+      float fCpuUsage = CUtil::CurrentCpuUsage();
+
+      strGeneralFPS.Format("fps:%02.2f cpu:%02.2f %s", g_infoManager.GetFPS(), fCpuUsage, strGeneral.c_str() );
       CGUIMessage msg(GUI_MSG_LABEL_SET, GetID(), LABEL_ROW3);
       msg.SetLabel(strGeneralFPS);
       OnMessage(msg);
